--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -155,58 +155,6 @@ jobs:
           path: out/*.exe
           if-no-files-found: error
 
-  test-exe:
-    needs: package-exe
-    runs-on: windows-latest
-    steps:
-      - name: Download installer
-        uses: actions/download-artifact@v4
-        with:
-          name: ${{ env.APP_NAME }}-${{ env.VERSION }}.exe
-          path: installer
-
-      - name: Install package
-        shell: powershell
-        run: |
-          $installer = Get-ChildItem installer -Filter *.exe | Select-Object -First 1
-          if (-not $installer) { throw "Installer not found" }
-          Start-Process -FilePath $installer.FullName -ArgumentList '/S' -Wait
-
-      - name: Verify CLI availability
-        shell: powershell
-        run: |
-          $roots = @(
-            Join-Path $env:ProgramFiles $env:APP_NAME,
-            Join-Path $env:LOCALAPPDATA "Programs\$env:APP_NAME"
-          ) | Where-Object { $_ -and (Test-Path $_) }
-          $cliPath = $null
-          foreach ($root in $roots) {
-            $candidate = Get-ChildItem -Path $root -Recurse -Filter "$env:APP_NAME.exe" -ErrorAction SilentlyContinue |
-              Where-Object { $_.FullName -match '\\bin\\' } |
-              Select-Object -First 1
-            if ($candidate) { $cliPath = $candidate.FullName; break }
-          }
-          if (-not $cliPath) {
-            Write-Host "Available roots searched: $roots"
-            throw "Could not locate installed CLI after EXE install"
-          }
-          & $cliPath --version
-
-      - name: Uninstall package
-        if: always()
-        shell: powershell
-        run: |
-          $roots = @(
-            Join-Path $env:ProgramFiles $env:APP_NAME,
-            Join-Path $env:LOCALAPPDATA "Programs\$env:APP_NAME"
-          ) | Where-Object { $_ -and (Test-Path $_) }
-          foreach ($root in $roots) {
-            $uninstaller = Get-ChildItem -Path $root -Filter "Uninstall*.exe" -ErrorAction SilentlyContinue | Select-Object -First 1
-            if ($uninstaller) {
-              Start-Process -FilePath $uninstaller.FullName -ArgumentList '/S' -Wait
-            }
-          }
-
   package-msi:
     needs: build-and-test
     runs-on: windows-latest
@@ -269,24 +217,76 @@ jobs:
           path: dist/*.msi
           if-no-files-found: error
 
-  test-msi:
-    needs: package-msi
+  test-windows-installers:
+    needs:
+      - package-exe
+      - package-msi
     runs-on: windows-latest
+    timeout-minutes: 20
     steps:
+      - name: Download EXE
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ env.APP_NAME }}-${{ env.VERSION }}.exe
+          path: installer/exe
+
+      - name: Install EXE
+        shell: powershell
+        run: |
+          $installer = Get-ChildItem installer/exe -Filter *.exe | Select-Object -First 1
+          if (-not $installer) { throw "EXE installer not found" }
+          Start-Process -FilePath $installer.FullName -ArgumentList '/S' -Wait
+
+      - name: Verify CLI after EXE install
+        shell: powershell
+        run: |
+          $roots = @(
+            Join-Path $env:ProgramFiles $env:APP_NAME,
+            Join-Path $env:LOCALAPPDATA "Programs\$env:APP_NAME"
+          ) | Where-Object { $_ -and (Test-Path $_) }
+          $cliPath = $null
+          foreach ($root in $roots) {
+            $candidate = Get-ChildItem -Path $root -Recurse -Filter "$env:APP_NAME.exe" -ErrorAction SilentlyContinue |
+              Where-Object { $_.FullName -match '\\bin\\' } |
+              Select-Object -First 1
+            if ($candidate) { $cliPath = $candidate.FullName; break }
+          }
+          if (-not $cliPath) {
+            Write-Host "Checked roots: $roots"
+            throw "CLI not found after EXE install"
+          }
+          & $cliPath --version
+          & $cliPath -V
+
+      - name: Uninstall EXE
+        if: always()
+        shell: powershell
+        run: |
+          $roots = @(
+            Join-Path $env:ProgramFiles $env:APP_NAME,
+            Join-Path $env:LOCALAPPDATA "Programs\$env:APP_NAME"
+          ) | Where-Object { $_ -and (Test-Path $_) }
+          foreach ($root in $roots) {
+            $uninstaller = Get-ChildItem -Path $root -Filter "Uninstall*.exe" -ErrorAction SilentlyContinue | Select-Object -First 1
+            if ($uninstaller) {
+              Start-Process -FilePath $uninstaller.FullName -ArgumentList '/S' -Wait
+            }
+          }
+
       - name: Download MSI
         uses: actions/download-artifact@v4
         with:
           name: ${{ env.APP_NAME }}-${{ env.VERSION }}.msi
-          path: installer
+          path: installer/msi
 
       - name: Install MSI
         shell: powershell
         run: |
-          $msi = Get-ChildItem installer -Filter *.msi | Select-Object -First 1
+          $msi = Get-ChildItem installer/msi -Filter *.msi | Select-Object -First 1
           if (-not $msi) { throw "MSI not found" }
           Start-Process -FilePath msiexec.exe -ArgumentList '/i', $msi.FullName, '/qn', '/norestart' -Wait
 
-      - name: Verify CLI availability
+      - name: Verify CLI after MSI install
         shell: powershell
         run: |
           $installRoot = Join-Path $env:ProgramFiles $env:APP_NAME
@@ -296,12 +296,13 @@ jobs:
             Select-Object -First 1
           if (-not $cliPath) { throw "CLI executable not found under $installRoot" }
           & $cliPath.FullName --version
+          & $cliPath.FullName -V
 
       - name: Uninstall MSI
         if: always()
         shell: powershell
         run: |
-          $msi = Get-ChildItem installer -Filter *.msi | Select-Object -First 1
+          $msi = Get-ChildItem installer/msi -Filter *.msi | Select-Object -First 1
           if ($msi) {
             Start-Process -FilePath msiexec.exe -ArgumentList '/x', $msi.FullName, '/qn', '/norestart' -Wait
           }
@@ -372,6 +373,7 @@ jobs:
   test-deb:
     needs: package_deb
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     steps:
       - name: Download Debian package
         uses: actions/download-artifact@v4
@@ -390,6 +392,7 @@ jobs:
           set -euo pipefail
           command -v "${{ env.APP_NAME }}"
           "${{ env.APP_NAME }}" --version
+          "${{ env.APP_NAME }}" -V
 
       - name: Uninstall package
         if: always()
@@ -433,8 +436,7 @@ jobs:
     needs:
       - build-and-test
       - docker_image
-      - test-exe
-      - test-msi
+      - test-windows-installers
       - test-deb
     steps:
       - uses: actions/checkout@v4
