--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -19,6 +19,7 @@ env:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
 
     steps:
       - uses: actions/checkout@v4
@@ -116,6 +117,7 @@ jobs:
   package-exe:
     needs: build-and-test
     runs-on: windows-latest
+    timeout-minutes: 5
     steps:
       - uses: actions/checkout@v4
 
@@ -158,6 +160,7 @@ jobs:
   package-msi:
     needs: build-and-test
     runs-on: windows-latest
+    timeout-minutes: 5
     steps:
       - uses: actions/checkout@v4
 
@@ -222,7 +225,7 @@ jobs:
       - package-exe
       - package-msi
     runs-on: windows-latest
-    timeout-minutes: 20
+    timeout-minutes: 5
     steps:
       - name: Download EXE
         uses: actions/download-artifact@v4
@@ -230,47 +233,18 @@ jobs:
           name: ${{ env.APP_NAME }}-${{ env.VERSION }}.exe
           path: installer/exe
 
-      - name: Install EXE
+      - name: Smoke test portable EXE
         shell: powershell
         run: |
-          $installer = Get-ChildItem installer/exe -Filter *.exe | Select-Object -First 1
-          if (-not $installer) { throw "EXE installer not found" }
-          Start-Process -FilePath $installer.FullName -ArgumentList '/S' -Wait
-
-      - name: Verify CLI after EXE install
-        shell: powershell
-        run: |
-          $roots = @(
-            Join-Path $env:ProgramFiles $env:APP_NAME,
-            Join-Path $env:LOCALAPPDATA "Programs\$env:APP_NAME"
-          ) | Where-Object { $_ -and (Test-Path $_) }
-          $cliPath = $null
-          foreach ($root in $roots) {
-            $candidate = Get-ChildItem -Path $root -Recurse -Filter "$env:APP_NAME.exe" -ErrorAction SilentlyContinue |
-              Where-Object { $_.FullName -match '\\bin\\' } |
-              Select-Object -First 1
-            if ($candidate) { $cliPath = $candidate.FullName; break }
+          $portableExe = Get-ChildItem installer/exe -Filter *.exe | Select-Object -First 1
+          if (-not $portableExe) { throw "Portable EXE not found" }
+          Push-Location $portableExe.Directory.FullName
+          try {
+            & ".\$($portableExe.Name)" --version
+            & ".\$($portableExe.Name)" -V
           }
-          if (-not $cliPath) {
-            Write-Host "Checked roots: $roots"
-            throw "CLI not found after EXE install"
-          }
-          & $cliPath --version
-          & $cliPath -V
-
-      - name: Uninstall EXE
-        if: always()
-        shell: powershell
-        run: |
-          $roots = @(
-            Join-Path $env:ProgramFiles $env:APP_NAME,
-            Join-Path $env:LOCALAPPDATA "Programs\$env:APP_NAME"
-          ) | Where-Object { $_ -and (Test-Path $_) }
-          foreach ($root in $roots) {
-            $uninstaller = Get-ChildItem -Path $root -Filter "Uninstall*.exe" -ErrorAction SilentlyContinue | Select-Object -First 1
-            if ($uninstaller) {
-              Start-Process -FilePath $uninstaller.FullName -ArgumentList '/S' -Wait
-            }
+          finally {
+            Pop-Location
           }
 
       - name: Download MSI
@@ -295,8 +269,14 @@ jobs:
             Where-Object { $_.FullName -match '\\bin\\' } |
             Select-Object -First 1
           if (-not $cliPath) { throw "CLI executable not found under $installRoot" }
-          & $cliPath.FullName --version
-          & $cliPath.FullName -V
+          Push-Location $env:TEMP
+          try {
+            & $cliPath.FullName --version
+            & $cliPath.FullName -V
+          }
+          finally {
+            Pop-Location
+          }
 
       - name: Uninstall MSI
         if: always()
@@ -310,6 +290,7 @@ jobs:
   package_deb:
     needs: [build-and-test]
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     steps:
       - uses: actions/checkout@v4
 
@@ -373,7 +354,7 @@ jobs:
   test-deb:
     needs: package_deb
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 5
     steps:
       - name: Download Debian package
         uses: actions/download-artifact@v4
@@ -401,6 +382,7 @@ jobs:
   docker_image:
     needs: [build-and-test]
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     env:
       REST_JAR_NAME: ${{ needs.build.outputs.rest_jar_name }}
     steps:
@@ -438,6 +420,7 @@ jobs:
       - docker_image
       - test-windows-installers
       - test-deb
+    timeout-minutes: 5
     steps:
       - uses: actions/checkout@v4
 
