--- a/.github/workflows/a.yaml
+++ b/.github/workflows/a.yaml
@@ -12,6 +12,7 @@ env:
 jobs:
   build-jar:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     outputs:
       jar_name: ${{ steps.pick.outputs.jar_name }}
     steps:
@@ -47,6 +48,7 @@ jobs:
   package-deb:
     needs: build-jar
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     steps:
       - uses: actions/checkout@v4
 
@@ -117,6 +119,7 @@ jobs:
   package-msi:
     needs: build-jar
     runs-on: windows-latest
+    timeout-minutes: 5
     steps:
       - uses: actions/checkout@v4
 
