Refactor CI workflow to package MSI instead of app-image and remove WiX build steps

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -170,48 +170,24 @@ jobs:
           distribution: temurin
           java-version: '24'
 
-      - name: Install WiX
-        shell: powershell
-        run: choco install wixtoolset -y
-
       - name: Download JARs
         uses: actions/download-artifact@v4
         with:
           name: ${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar
           path: target
 
-      - name: jpackage -> app-image (CLI-only)
+      - name: jpackage -> MSI (CLI-only)
         shell: powershell
         run: |
           New-Item -ItemType Directory -Force -Path out | Out-Null
           jpackage `
-            --type app-image `
+            --type msi `
             --name "$env:APP_NAME" `
             --input target `
             --main-jar "${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar" `
-            --main-class "$env:MAIN_CLASS" `
-            --win-console `
+            --main-class "$env:MAIN_CLASS" `            
             --dest out
-      
-      - name: WiX harvest
-        shell: powershell
-        run: |
-          $src = Join-Path $PWD "out\$env:APP_NAME"
-          & "$env:WIX\bin\heat.exe" dir $src -cg AppFiles -dr INSTALLFOLDER -srd -var var.SourceDir -ag -out "harvest.wxs"
-
-      - name: Build MSI (WiX)
-        shell: powershell
-        run: |
-          New-Item -ItemType Directory -Force -Path "obj" | Out-Null
-          New-Item -ItemType Directory -Force -Path "dist" | Out-Null
-          & "$env:WIX\bin\candle.exe" -nologo -arch x64 `
-            -dSourceDir="$(Join-Path $PWD "out\$env:APP_NAME")" `
-            -out "obj\" `
-            "packaging/windows/product.wxs" "harvest.wxs"
-          $msiPath = Join-Path "dist" ("$($env:APP_NAME)-$($env:VERSION).msi")
-          & "$env:WIX\bin\light.exe" -nologo -ext WixUtilExtension -sval `
-            -o "$msiPath" `
-            "obj\product.wixobj" "obj\harvest.wixobj"
+            --win-add-to-path
       
       - name: Upload .msi
         uses: actions/upload-artifact@v4
