--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -114,49 +114,6 @@ jobs:
           path: "${{ steps.prepare.outputs.rest_path }}"
           if-no-files-found: error
 
-  package-exe:
-    needs: build-and-test
-    runs-on: windows-latest
-    timeout-minutes: 5
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Temurin JDK 24
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: '24'
-
-      - name: Download JARs
-        uses: actions/download-artifact@v4
-        with:
-          name: ${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar
-          path: target
-
-      - name: jpackage -> .exe (CLI-only)
-        shell: powershell
-        run: |
-          New-Item -ItemType Directory -Force -Path out | Out-Null
-          jpackage `
-            --type exe `
-            --name "$env:APP_NAME" `
-            --input target `
-            --main-jar "${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar" `
-            --main-class "$env:MAIN_CLASS" `
-            --win-console `
-            --dest out
-          $exe = Get-ChildItem -Path out -Filter *.exe | Select-Object -First 1
-          if (-not $exe) { throw "Executable not produced in out/" }
-          $target = Join-Path $exe.Directory.FullName ("${env:APP_NAME}-${env:VERSION}.exe")
-          if ($exe.FullName -ne $target) { Move-Item -Force $exe.FullName $target }
-      
-      - name: Upload .exe
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ env.APP_NAME }}-${{ env.VERSION }}.exe
-          path: out/*.exe
-          if-no-files-found: error
-
   package-msi:
     needs: build-and-test
     runs-on: windows-latest
@@ -180,15 +137,16 @@ jobs:
         shell: powershell
         run: |
           New-Item -ItemType Directory -Force -Path out | Out-Null
-          New-Item -ItemType Directory -Force -Path dist | Out-Null
           jpackage `
             --type msi `
             --name "$env:APP_NAME" `
             --input target `
             --main-jar "${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar" `
             --main-class "$env:MAIN_CLASS" `
-            --dest "dist" `
             --win-add-to-path
+          $msi = Get-ChildItem -Path . -Filter *.msi | Select-Object -First 1
+          if (-not $msi) { throw "MSI not produced" }
+          Move-Item -Force $msi.FullName (Join-Path "dist" $msi.Name)
       
       - name: Upload .msi
         uses: actions/upload-artifact@v4
