--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -1,4 +1,4 @@
-name: CI Pipeline
+name: CI (one job, fast)
 
 on:
   push:
@@ -17,9 +17,12 @@ env:
   DOCKERHUB_USERNAME: antonyoviedo
 
 jobs:
-  build-and-test:
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
+  build-package-release:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
 
     steps:
       - uses: actions/checkout@v4
@@ -31,112 +34,44 @@ jobs:
           java-version: '24'
           cache: maven
 
-      - name: Build with Maven
+      - name: Build with Maven (all modules)
         run: mvn -B -DskipTests package
 
-      - name: Check Docker Hub credentials
-        id: check_docker
+      - name: Find built jars
+        id: jars
+        shell: bash
         run: |
-          if [ -n "${DOCKERHUB_USERNAME:-}" ] && [ -n "${DOCKERHUB_TOKEN:-}" ]; then
-            echo "available=true" >> "$GITHUB_OUTPUT"
-          else
-            echo "available=false" >> "$GITHUB_OUTPUT"
-          fi
+          set -e
+          CLI_JAR=$(ls -1 expresso-cli/target/*.jar | head -n1)
+          REST_JAR=$(ls -1 expresso-rest/target/*.jar | head -n1)
+          echo "cli=$CLI_JAR"   >> "$GITHUB_OUTPUT"
+          echo "rest=$REST_JAR" >> "$GITHUB_OUTPUT"
 
-      - name: Prepare release JARs
-        id: prepare
-        env:
-          APP_NAME: ${{ env.APP_NAME }}
-          VERSION: ${{ env.VERSION }}
+      # ---------- Linux path: test + .deb + docker + release assets ----------
+      - name: REST health (Linux)
+        if: runner.os == 'Linux'
         run: |
-          set -euo pipefail
-          CLI_JAR=$(find expresso-cli/target -maxdepth 1 -type f -name '*-shaded.jar' | sort | head -n1)
-          [ -z "$CLI_JAR" ] && CLI_JAR=$(find expresso-cli/target -maxdepth 1 -type f -name '*.jar' | sort | head -n1)
-          [ -z "$CLI_JAR" ] && { echo "No CLI jar found under expresso-cli/target" >&2; exit 1; }
-
-          REST_JAR=$(find expresso-rest/target -maxdepth 1 -type f -name '*-shaded.jar' | sort | head -n1)
-          [ -z "$REST_JAR" ] && REST_JAR=$(find expresso-rest/target -maxdepth 1 -type f -name '*.jar' | sort | head -n1)
-          [ -z "$REST_JAR" ] && { echo "No REST jar found under expresso-rest/target" >&2; exit 1; }
-
-          RELEASE_CLI="${APP_NAME}-${VERSION}-cli.jar"
-          RELEASE_REST="${APP_NAME}-${VERSION}-rest.jar"
-          cp "$CLI_JAR" "expresso-cli/target/${RELEASE_CLI}"
-          cp "$REST_JAR" "expresso-rest/target/${RELEASE_REST}"
-
-          echo "cli_path=expresso-cli/target/${RELEASE_CLI}" >> "$GITHUB_OUTPUT"
-          echo "rest_path=expresso-rest/target/${RELEASE_REST}" >> "$GITHUB_OUTPUT"
-
-      - name: Validate REST health endpoint
-        run: |
-          set -euo pipefail
-          REST_JAR="${{ steps.prepare.outputs.rest_path }}"
-          echo "Launching $REST_JAR"
+          set -e
           export SERVER_PORT=8081
-          java -jar "$REST_JAR" >/tmp/rest.log 2>&1 &
-          cleanup() {
-            kill %1 >/dev/null 2>&1 || true
-            wait %1 >/dev/null 2>&1 || true
-            cat /tmp/rest.log || true
-          }
-          trap cleanup INT TERM EXIT
+          java -jar "${{ steps.jars.outputs.rest }}" >/tmp/rest.log 2>&1 &
+          PID=$!
           for _ in $(seq 1 30); do
-            if curl -sSf http://127.0.0.1:8081/api/v1/health | grep -q 'ok'; then
-              echo "REST healthcheck passed"
-              exit 0
-            fi
-            sleep 2
+            curl -fsS http://127.0.0.1:8081/api/v1/health | grep -q ok && break || sleep 2
           done
-          echo "REST healthcheck failed" >&2
-          exit 1
+          kill $PID || true
 
-      - name: Smoke test CLI jar
+      - name: Smoke CLI (Linux)
+        if: runner.os == 'Linux'
         run: |
-          set -euo pipefail
-          CLI_JAR="${{ steps.prepare.outputs.cli_path }}"
-          echo "Testing $CLI_JAR"
-          java -jar "$CLI_JAR" --help
+          set -e
+          java -jar "${{ steps.jars.outputs.cli }}" --help
           mkdir -p output
-          java -jar "$CLI_JAR" transpile examples/HelloWorld0.expresso --out output --verbose
-          java -jar "$CLI_JAR" build     examples/HelloWorld0.expresso --out output --verbose
-          java -jar "$CLI_JAR" run       examples/HelloWorld0.expresso --out output --verbose
+          java -jar "${{ steps.jars.outputs.cli }}" transpile examples/HelloWorld0.expresso --out output --verbose
+          java -jar "${{ steps.jars.outputs.cli }}" build     examples/HelloWorld0.expresso --out output --verbose
+          java -jar "${{ steps.jars.outputs.cli }}" run       examples/HelloWorld0.expresso --out output --verbose
 
-      - name: Upload CLI jar
-        uses: actions/upload-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar"
-          path: "${{ steps.prepare.outputs.cli_path }}"
-          if-no-files-found: error
-
-      - name: Upload REST jar
-        uses: actions/upload-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-rest.jar"
-          path: "${{ steps.prepare.outputs.rest_path }}"
-          if-no-files-found: error
-          
-  package_deb:
-    needs: [build-and-test]
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Temurin JDK 24
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: '24'
-
-      - name: Prepare target directory
-        run: mkdir -p target
-
-      - name: Download CLI jar
-        uses: actions/download-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar"
-          path: target
-
-      - name: Write Debian maintainer scripts
+      - name: Write Debian maintainer scripts (PATH symlink)
+        if: runner.os == 'Linux'
         run: |
           mkdir -p packaging
           cat > packaging/postinst <<EOF
@@ -153,191 +88,63 @@ jobs:
           EOF
           chmod 755 packaging/postinst packaging/postrm
 
-      - name: Build Debian package
+      - name: jpackage -> .deb (Linux)
+        if: runner.os == 'Linux'
         run: |
-          set -euo pipefail
+          set -e
           mkdir -p dist
           jpackage \
             --type deb \
             --name "${APP_NAME}" \
             --linux-package-name "${APP_NAME}" \
-            --input target \
-            --main-jar "${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar" \
+            --input "$(dirname '${{ steps.jars.outputs.cli }}')" \
+            --main-jar "$(basename '${{ steps.jars.outputs.cli }}')" \
             --main-class "${MAIN_CLI_CLASS}" \
             --app-version "${VERSION}" \
             --linux-deb-maintainer "Expresso Team <antony-08@hotmail.com>" \
             --resource-dir packaging \
-            --dest dist \
-            --verbose
+            --dest dist
           mv dist/*.deb "dist/${APP_NAME}-${VERSION}.deb"
 
-      - name: Upload Debian package
-        uses: actions/upload-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.deb"
-          path: dist/*.deb
-          if-no-files-found: error
-
-  test-deb:
-    needs: package_deb
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    steps:
-      - name: Download Debian package
-        uses: actions/download-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.deb"
-          path: installer
-
-      - name: Install package
-        run: |
-          set -euo pipefail
-          DEB=$(find installer -name '*.deb' -print -quit)
-          sudo dpkg -i "$DEB" || (sudo apt-get update && sudo apt-get -f -y install && sudo dpkg -i "$DEB")
-
-      - name: Verify CLI availability
-        run: |
-          set -euo pipefail
-          command -v "${{ env.APP_NAME }}"
-          "${{ env.APP_NAME }}" --version
-          "${{ env.APP_NAME }}" -V
-
-      - name: Uninstall package
-        if: always()
-        run: sudo dpkg -r "${{ env.APP_NAME }}"
-
-  docker_image:
-    needs: [build-and-test]
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    env:
-      REST_JAR_NAME: ${{ needs.build.outputs.rest_jar_name }}
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Docker Hub login
+      - name: Docker login (Linux, if secrets present)
         uses: docker/login-action@v3
         with:
           username: ${{ env.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Download REST jar
-        uses: actions/download-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-rest.jar"
-          path: artifacts
-
-      - name: Build Docker image
+      - name: Build & push Docker image (Linux)
         run: |
-          set -euo pipefail
-          REST_JAR=$(find artifacts -maxdepth 1 -name "*-rest.jar" -print -quit)
-          if [ -z "$REST_JAR" ]; then
-            echo "REST jar not found" >&2
-            exit 1
-          fi
-          mkdir -p expresso-rest/target
-          cp "$REST_JAR" expresso-rest/target/
-          docker build -t antonyoviedo/expresso:latest .
-          docker push antonyoviedo/expresso:latest
+          set -e
+          docker build -t ${{ env.DOCKERHUB_USERNAME }}/expresso:latest .
+          docker push ${{ env.DOCKERHUB_USERNAME }}/expresso:latest
 
-  package-msi:
-    needs: build-and-test
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Temurin JDK 24
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: '24'
-
-      - name: Install WiX
+      # ---------- Windows path: MSI ----------
+      - name: Install WiX (optional, harmless)
+        if: runner.os == 'Windows'
         shell: powershell
         run: choco install wixtoolset -y
 
-      - name: Download JARs
-        uses: actions/download-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar"
-          path: artifacts
-
-      - name: jpackage -> app-image (CLI-only)
+      - name: jpackage -> .msi (+PATH)
+        if: runner.os == 'Windows'
         shell: powershell
         run: |
-          New-Item -ItemType Directory -Force -Path out | Out-Null
-          jpackage `
-            --type app-image `
-            --name "$env:APP_NAME" `
-            --input target `
-            --main-jar "${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar" `
-            --main-class "$env:MAIN_CLI_CLASS" `
-            --win-console `
-            --dest out
-
-      - name: WiX harvest
-        shell: powershell
-        run: |
-              $src = Join-Path $PWD "out\$env:APP_NAME"
-              & "$env:WIX\bin\heat.exe" dir $src -cg AppFiles -dr INSTALLFOLDER -srd -var var.SourceDir -ag -out harvest.wxs
-
-      - name: Build MSI (WiX)
-        shell: powershell
-        run: |
-          & "$env:WIX\bin\candle.exe" -arch x64 -dSourceDir="$(Join-Path $PWD "out\$env:APP_NAME")" -out obj\ packaging/windows/product.wxs harvest.wxs
           New-Item -ItemType Directory -Force -Path dist | Out-Null
-          & "$env:WIX\bin\light.exe" -ext WixUtilExtension -sval -o "dist\expressor-1.1.msi" obj\product.wixobj obj\harvest.wixobj
+          $cliJar   = "${{ steps.jars.outputs.cli }}"
+          $inputDir = Split-Path -Parent $cliJar
+          $mainJar  = Split-Path -Leaf   $cliJar
+          jpackage `
+            --type msi `
+            --name "$env:APP_NAME" `
+            --input "$inputDir" `
+            --main-jar "$mainJar" `
+            --main-class "$env:MAIN_CLI_CLASS" `
+            --app-version "$env:VERSION" `
+            --dest dist `
+            --win-add-to-path `
+            --vendor "$env:APP_NAME"
 
-      - name: Upload .msi
-        uses: actions/upload-artifact@v4
-        with:
-          name: windows-msi
-          path: dist/*.msi
-          if-no-files-found: error
-
-  release:
-    runs-on: ubuntu-latest
-    needs:
-      - build-and-test
-      - docker_image
-      - test-deb
-      - package-msi
-    timeout-minutes: 5
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Download built CLI jar
-        uses: actions/download-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar"
-          path: artifacts/cli
-
-      - name: Download REST jar
-        uses: actions/download-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-rest.jar"
-          path: artifacts/rest
-
-      - name: Download Debian package
-        uses: actions/download-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.deb"
-          path: artifacts/deb
-
-      - name: Download Windows MSI
-        uses: actions/download-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.msi"
-          path: artifacts/msi
-
-      - name: Download Windows EXE
-        uses: actions/download-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.exe"
-          path: artifacts/exe
-
-      - name: Create GitHub release
-        id: gh_release
+      # ---------- Release (each leg uploads its own assets to same tag) ----------
+      - name: Create/Update GitHub Release + upload assets
         uses: softprops/action-gh-release@v2
         with:
           tag_name: "v${{ env.VERSION }}"
@@ -345,16 +152,16 @@ jobs:
           name: "${{ env.APP_NAME }} v${{ env.VERSION }}"
           generate_release_notes: true
           files: |
-            artifacts/cli/*.jar
-            artifacts/rest/*.jar
-            artifacts/deb/*.deb
-            artifacts/msi/*.msi
-            artifacts/exe/*.exe
+            ${{ steps.jars.outputs.cli }}
+            ${{ steps.jars.outputs.rest }}
+            dist/*.deb
+            dist/*.msi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      # ---------- Discord notify once (Linux only) ----------
       - name: Discord notify (success)
-        if: ${{ success() }}
+        if: runner.os == 'Linux' && success()
         uses: Ilshidur/action-discord@0.3.2
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
@@ -365,11 +172,10 @@ jobs:
             • Tag: `${{ github.ref_name }}`
             • Author: ${{ github.actor }}
             • Commit: `${{ github.sha }}`
-            • Release: ${{ steps.gh_release.outputs.html_url }}
             • Run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
       - name: Discord notify (failure)
-        if: ${{ failure() }}
+        if: runner.os == 'Linux' && failure()
         uses: Ilshidur/action-discord@0.3.2
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
@@ -380,14 +186,4 @@ jobs:
             • Ref: `${{ github.ref_name }}`
             • Author: ${{ github.actor }}
             • Run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-
-      - name: Delete uploaded artifacts
-        if: ${{ success() }}
-        uses: geekyeggo/delete-artifact@v4
-        with:
-          name: |
-            ${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar
-            ${{ env.APP_NAME }}-${{ env.VERSION }}-rest.jar
-            ${{ env.APP_NAME }}-${{ env.VERSION }}.deb
-            ${{ env.APP_NAME }}-${{ env.VERSION }}.msi
-            ${{ env.APP_NAME }}-${{ env.VERSION }}.exe
+            
