--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -20,7 +20,6 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
     timeout-minutes: 5
-
     steps:
       - uses: actions/checkout@v4
 
@@ -114,7 +113,7 @@ jobs:
           path: "${{ steps.prepare.outputs.rest_path }}"
           if-no-files-found: error
           
-  package_deb:
+  package-deb:
     needs: [build-and-test]
     runs-on: ubuntu-latest
     timeout-minutes: 5
@@ -178,7 +177,7 @@ jobs:
           path: dist/*.deb
           if-no-files-found: error
 
-  docker_image:
+  docker-image:
     needs: [build-and-test]
     runs-on: ubuntu-latest
     timeout-minutes: 5
@@ -213,7 +212,7 @@ jobs:
           docker push antonyoviedo/expresso:latest
 
   package-msi:
-    needs: build-and-test
+    needs: [build-and-test]
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
@@ -271,7 +270,8 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build-and-test
-      - docker_image
+      - docker-image
+      - package-deb
       - package-msi
     timeout-minutes: 5
     steps:
