Ajustes Generales + Autores en Encabezados
Se realizaron ajustes generales de imports para un correcto funcionamiento, se añadieron los autores en el encabezado de los códigos fuente y se realizaron test nuevamente.

--- a/expresso-core/pom.xml
+++ b/expresso-core/pom.xml
@@ -45,7 +45,7 @@
               <visitor>true</visitor>
               <arguments>
                 <argument>-package</argument>
-                <argument>com.diezam04.expresso.core.transpiler.generated</argument>
+                <argument>com.diezam04.expresso.core.transpiler</argument>
               </arguments>
               <outputDirectory>${project.build.directory}/generated-sources/antlr4</outputDirectory>
             </configuration>
